--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://talal-iqbal.github.io/Weather-App/",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Talal-Iqbal/Weather-App.git"
+  },
   "scripts": {
     "build": "webpack",
     "start": "webpack serve --open",
@@ -21,6 +26,5 @@
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
-  }, 
-  "homepage": "https://talal-iqbal.github.io/Weather-App/"
+  }
 }
